--- a/sass/components/_regular-customers.scss
+++ b/sass/components/_regular-customers.scss
@@ -1,5 +1,6 @@
 .regular-customers {
   padding: 60px 0;
+  height: 370px;
   @media screen and (min-width: 768px) {
     padding-bottom: 45px;
   }
