--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   display: block;
   max-width: 1600px;
+  height: 252px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
