--- a/sass/components/_form-request.scss
+++ b/sass/components/_form-request.scss
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    padding: 40px;
+    padding: 20px 40px;
   }
   &-title {
     font-weight: 700;
