--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,18 +18,19 @@
   width: 100%;
   height: 100%;
   max-width: 450px;
+
   font-size: 12px;
-  // min-height: 568px;
+  min-height: 568px;
   overflow: auto;
   background-color: $white;
   display: block;
   border-radius: 4px;
   @media screen and (min-width: 320px) and (max-width: 330px) {
     width: 100%;
-    max-height: 568px;
+    max-height: auto;
   }
   @media screen and (min-height: 568px) {
-    height: auto;
+    height: 581px;
   }
   @media screen and (min-width: 1200px) {
     font-size: 14px;
