--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   background-color: $light-grey;
-  max-width: 1600px;
+ /*max-width: 1600px;*/
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
