--- a/sass/components/_form-request.scss
+++ b/sass/components/_form-request.scss
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    padding: 20px 40px;
+    padding: 30px 40px;
   }
   &-title {
     font-weight: 700;
@@ -50,6 +50,8 @@
 .person-request {
   position: relative;
   display: block;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .icon-person-request {
   position: absolute;
@@ -102,7 +104,7 @@
   justify-content: center;
   letter-spacing: 0.06em;
   display: inline-block;
-  margin-top: 50px;
+  margin-top: 30px;
   border: 1px solid $blue;
   border-radius: 4px;
   padding-top: 10px;
